--- a/C09DisplayVisibility.html
+++ b/C09DisplayVisibility.html
@@ -2,62 +2,59 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>C09DisplayVisibility.html</title>
     <style>
         fieldset div{
-            width: 100px; height: 100px;
-            text-align: center; line-height: 100px;
+            width:100px; height:100px; 
+            text-align:center; line-height:100px;
         }
-        .div1{background-color: red;}
-        .div2{background-color: blue;}
-        .div3{background-color: green;}
+        .div1 {background-color:red;}
+        .div2 {background-color:blue;}
+        .div3 {background-color:green;}
     </style>
-
-
 </head>
 <body>
-    <h2>display VS Visibility 속성</h2>
-
+	<h2>display VS Visibility 속성</h2>
+	
     <!-- 
-        visibility 속성은 hidden일때 엘리먼트를 숨김처리하지만
-        영역은 그대로 유지된다.
-            hidden: 엘리먼트 숨김
-            visible:디폴트값으로 보임처리
+        visibility속성은 hidden일때 엘리먼트를 숨김처리 하지만
+        영역은 그대로 유지된다. 
+            hidden : 엘리먼트 숨김
+            visible : 디폴트값으로 보임 처리
      -->
-
-    <fieldset>
-        <legend>Visibility속성</legend>
-        <div class="div1">left</div>
-        <div class="div2" style="visibility: hidden;">center</div>
-        <div class="div3">right</div>
+	<fieldset>
+		<legend>Visibility속성</legend>        
+		<div class="div1">left</div>
+		<div class="div2" style="visibility:hidden;">center</div>
+		<div class="div3">right</div>		
+	</fieldset>
+	
+    <!-- 
+        display속성은 none일때 엘리먼트를 숨김처리하고, 
+        동시에 영역까지 삭제한다. 그래서 약간의 애니메이션
+        효과가 나타난다. 
+            none : 엘리먼트 및 영역까지 숨김 처리
+            block : 보임 처리
+     -->
+	<fieldset>
+		<legend>Display속성</legend>       
+		<div class="div1">left</div>
+		<div class="div2" style="display:none;">center</div>
+		<div class="div3">right</div>		
+	</fieldset>
+	
+    <!-- 
+        display속성과 동일하게 엘리먼트와 영역을 동시에 삭제한다.
+     -->
+	<fieldset>
+		<legend>HTML5의 hidden 속성</legend>       
+		<div class="div1">left</div>
+		<div class="div2" hidden>center</div>
+		<div class="div3">right</div>		
     </fieldset>
 
-    <!-- 
-        display속성은 none일때 엘리먼트를 숨김처리하고,
-        동시에 영역까지 삭제한다. 그래서 약갼의 애니메이션
-        효과가 나타난다.
-            none: 엘리먼트 및 영역까지 숨김 처리
-            block: 보임 처리
-     -->
-     <fieldset>
-        <legend>Display속성</legend>
-        <div class="div1">left</div>
-        <div class="div2" style="display: none;">center</div>
-        <div class="div3">right</div>
-    </fieldset>
 
-    <!-- 
-        display속성과 동일하게 엘리먼트와 영역을 동시에 삭제함
-     -->
-
-    <fieldset>
-        <legend>HTML의 hidden 속성</legend>
-        <div class="div1">left</div>
-        <div class="div2" hidden>center</div>
-        <div class="div3">right</div>
-    </fieldset>
 
     <style>
         fieldset.inline div{
@@ -66,17 +63,18 @@
     </style>
     <!-- 
         div태그가 가진 block속성을 완전히 파괴하여
-        width, height속성은 의미가 없어진다. 그리고
-        가로형 배치로 변경된다. 즉 span태그와 같은
-        인라인 엘리먼트로 변경된다
+        width, height 속성은 의미가 없어진다. 그리고 
+        가로형 배치로 변경된다. 즉 span태그와 같은 
+        인라인 엘리먼트로 변경되었다. 
      -->
-    <h4>block=>inline으로 변경</h4>
+    <h4>block => inline 으로 변경</h4>
     <fieldset class="inline">
-        <legend>가로형 배치로 변경하기</legend>
-        <div class="div1">left</div>
-        <div class="div2" >center</div>
-        <div class="div3">right</div>
+		<legend>가로형 배치로 변경하기</legend>       
+		<div class="div1">left</div>
+		<div class="div2">center</div>
+		<div class="div3">right</div>		
     </fieldset>
+
 
     <style>
         fieldset.inline_block div{
@@ -84,18 +82,20 @@
         }
     </style>
     <!-- 
-        block속성을 유지하면서 가로형으로 배치해야 할 때 사용하는
-        속성으로, 레이아웃을 구성할 때 유용하다. 즉 크기를 유지할 수 
+        block속성을 유지하면서 가로형으로 배치해야 할때 사용하는
+        속성으로, 레이아웃을 구성할때 유용하다. 즉 크기를 유지할수
         있는 div태그와 가로형배치가 되는 span태그의 중간정도의
-        역할을 한다.
+        역할을 한다. 
      -->
-    <h4>block=>inline-block으로 변경</h4>
+    <h4>block => inline-block 으로 변경</h4>
     <fieldset class="inline_block">
-        <legend>가로형 배치로 변경하기</legend>
-        <div class="div1">left</div>
-        <div class="div2" >center</div>
-        <div class="div3">right</div>
+		<legend>가로형 배치로 변경하기</legend>       
+		<div class="div1">left</div>
+		<div class="div2">center</div>
+		<div class="div3">right</div>		
     </fieldset>
+
+ 
 
     <style>
         fieldset.block span{
@@ -103,23 +103,20 @@
         }
     </style>
     <!-- 
-        inline속성인 span태그가 block속성으로 변경되어
-        세로형 배치가 된다.
+    inline속성인 span태그가 block속성으로 변경되어
+    세로형 배치가 된다. 
      -->
-    <h4>block=>inline-block으로 변경</h4>
-    <fieldset class="inline_block">
-        <legend>가로형 배치로 변경하기</legend>
-        <span class="div1">left</span>
-        <span class="div2" >center</span>
-        <span class="div3">right</span>
+    <h4>inline => block 으로 변경</h4>
+    <fieldset class="block">
+		<legend>세로형 배치로 변경하기</legend>       
+		<span class="div1">left</span>
+		<span class="div2">center</span>
+		<span class="div3">right</span>		
     </fieldset>
-<!-- 수업놓침 쌤꺼 가져오기 -->
+ 
 
-<br><br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br><br>
-
-
-
+    <br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br>
 </body>
 </html>
